--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="rr-sample" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rr-sample.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="leads-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\leads-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="leads-logo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\leads-logo2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
