--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="leads-logo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\leads-logo2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
